--- a/tsuru.yaml
+++ b/tsuru.yaml
@@ -2,3 +2,4 @@ hooks:
   build:
     - python manage.py makemigrations --noinput
     - python manage.py migrate --noinput
+    - python manage.py loaddata app_data.json
