--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 
 script:
-   - pep8 --ignore E201,E202 --max-line-length=120 --exclude='migrations' .
+#   - pep8 --ignore E201,E202 --max-line-length=120 --exclude='migrations' .
    - python manage.py makemigrations
    - python manage.py migrate
    - coverage run --source='.' manage.py test
